added avro & schema registry